npr/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:12.3.1
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: dashboard-provider
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboard-node-exporter
          mountPath: /var/lib/grafana/dashboards/node-exporter
        - name: dashboard-victoriametrics-cluster
          mountPath: /var/lib/grafana/dashboards/victoriametrics-cluster
        - name: dashboard-victorialogs-cluster
          mountPath: /var/lib/grafana/dashboards/victorialogs-cluster
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 512Mi
      volumes:
      - name: datasources
        configMap:
          name: grafana-datasources
      - name: dashboard-provider
        configMap:
          name: grafana-dashboard-provider
      - name: dashboard-node-exporter
        configMap:
          name: grafana-dashboard-node-exporter
      - name: dashboard-victoriametrics-cluster
        configMap:
          name: grafana-dashboard-victoriametrics-cluster
      - name: dashboard-victorialogs-cluster
        configMap:
          name: grafana-dashboard-victorialogs-cluster
